@@ -1,3 +1,9 @@
+Sun Mar 20 18:53:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (fix_gt, fix_ge, fix_lt, fix_le): optimize comparisons
+	  Fixnum against Bignum by rb_big_cmp in inversed order without
+	  new Bignum instance.
+
 Sun Mar 20 18:44:52 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* time.c (add): remove FIXABLE() which is in LONG2NUM().
